<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.blockadm.common.comstomview.BaseTitleBar
        android:id="@+id/tilte"
        app:lefttext_is_show="true"
        app:righttext_is_show="true"
        android:layout_alignParentTop="true"
        app:lefttext_color="@color/color_0A0A0A"
        app:centertext = "详情"
        app:lefttext="返回"
        app:lefticon_is_show="true"
        app:lefticon_src="@mipmap/ic_back"
        app:righticon_is_show="true"
        app:righttext="分享"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45" />

    <com.blockadm.common.comstomview.FScrollView
        android:layout_below="@+id/tilte"
        android:id="@+id/rl_root"
        android:layout_above="@+id/layout_detail_foot"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:background="@android:color/background_light"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:maxLines="2"
                android:textSize="@dimen/sp20"
                android:id="@+id/tv_title"
                android:textStyle="bold"
                android:textColor="@color/color_0A0A0A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <WebView
                android:layout_marginTop="@dimen/dp10"
                android:textSize="@dimen/sp14"
                android:id="@+id/wv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <com.blockadm.common.comstomview.TagLayout
                android:id="@+id/tl"
                android:layout_marginTop="@dimen/dp20"
                android:numColumns="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/color_97979F"
                    android:drawablePadding="@dimen/dp10"
                    android:id="@+id/tv_collect"
                    android:drawableTop="@mipmap/news_like"
                    android:text="@string/collect"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />



                <TextView
                    android:gravity="center"
                    android:textColor="@color/color_97979F"
                    android:layout_marginLeft="@dimen/dp40"
                    android:drawablePadding="@dimen/dp10"
                    android:id="@+id/tv_share"
                    android:drawableTop="@mipmap/news_share1"
                    android:text="@string/share"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll__follow_up"
                android:layout_marginTop="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:background="@color/color_FFFF6B00"
                    android:layout_width="@dimen/dp4"
                    android:layout_height="@dimen/dp18"/>

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/tv_follow_up"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/sp14"
                    android:text="@string/follow_up"
                    android:textColor="@color/color_0A0A0A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.blockadm.common.comstomview.EmptyRecyclerView
                android:id="@+id/ev_comment"
                android:layout_marginTop="@dimen/dp20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.blockadm.common.comstomview.FScrollView>

    <include
        android:layout_below="@+id/rl_root"
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/layout_detail_foot"
        android:layout_alignParentBottom="true"
        layout="@layout/layout_detail_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>